--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.2",
+    "axios": "^1.7.2",
+    "framer-motion": "^11.2.10",
+    "next": "14.2.3",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3",
-    "framer-motion": "^11.2.10",
-    "qrcode.react": "^3.1.0",
-    "axios": "^1.7.2",
-    "googleapis": "^137.1.0"
+    "react-hook-form": "^7.66.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
